# finfuns

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile.ci  LICENSE.md  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  prelude.cmake  project-is-top-level.cmake  variables.cmake
examples/: CMakeLists.txt  ex_irr.cpp  ex_npv.cpp  ex_xirr.cpp  ex_xnpv.cpp
finfunslib/: finfunslib.cpp  finfunslib.h
include/finfuns/: day_count.hpp  expected.hpp  finfuns.hpp  fv.hpp  irr.hpp  npv.hpp  npv_calculator.hpp  overloaded.hpp  payment_due_type.hpp  preprocessor.hpp  pv.hpp  rate_solver.hpp  xirr.hpp  xnpv.hpp  xnpv_calculator.hpp
lib/finfunslib/: finfunslib.h
lib/finfunslib/src/: finfunslib.cpp
test/: CMakeLists.txt  day_count_helper.hpp  test_data.hpp
test/finfuns/: CMakeLists.txt  finfuns_test.cpp  fv_test.cpp  irr_test.cpp  npv_test.cpp  pv_test.cpp  xirr_test.cpp  xnpv_test.cpp
test/finfunslib/: CMakeLists.txt  main.cpp
